add: add styling logic to side-navigation

--- a/assets/styles/foundation/_variable.scss
+++ b/assets/styles/foundation/_variable.scss
@@ -8,6 +8,9 @@ $sp-breakpoint: 420px;
 // colors
 
 $color-default-black: #121212;
+$color-default-blue: #1e65df;
+$color-dark-blue: #1757c4;
+$color-white: #fff;
 $color-border-black: rgba(0, 0, 0, 0.5);
 
 // fonts
