--- a/assets/styles/foundation/_mixin.scss
+++ b/assets/styles/foundation/_mixin.scss
@@ -1,19 +1,19 @@
 @charset "utf-8";
 
-// @mixin mq_sp($sp-breakpoint) {
-//   @media only screen and (max-width: $sp-breakpoint) {
-//     @content;
-//   }
-// }
+@mixin mq_sp {
+  @media only screen and (max-width: $sp-breakpoint - 1) {
+    @content;
+  }
+}
 
-// @mixin mq_tablet($sp-breakpoint, $pc-breakpoint) {
-//   @media only screen and (min-width: $sp-breakpoint + 1) and (max-width: $pc-breakpoint) {
-//     @content;
-//   }
-// }
+@mixin mq_tablet {
+  @media only screen and (min-width: $sp-breakpoint) and (max-width: $pc-breakpoint - 1) {
+    @content;
+  }
+}
 
-// @mixin mq_pc($pc-breakpoint) {
-//   @media only screen and (min-width: $pc-breakpoint) {
-//     @content;
-//   }
-// }
+@mixin mq_pc {
+  @media only screen and (min-width: $pc-breakpoint) {
+    @content;
+  }
+}
