--- a/assets/styles/foundation/_mixin.scss
+++ b/assets/styles/foundation/_mixin.scss
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+@mixin font-size($size) {
+  font-size: ($size * 10) + px;
+  font-size: ($size * 0.625) + rem;
+}
+
 @mixin mq_sp {
   @media only screen and (max-width: $sp-breakpoint - 1) {
     @content;
