change: change header color

--- a/assets/styles/foundation/_variable.scss
+++ b/assets/styles/foundation/_variable.scss
@@ -12,6 +12,7 @@ $color-default-blue: #1e65df;
 $color-dark-blue: #1757c4;
 $color-white: #fff;
 $color-border-black: rgba(0, 0, 0, 0.5);
+$color-border-gray: #f1f1f1;
 
 // fonts
 $jp-font: 'Noto Sans JP', sans-serif;
