feat: complete career-page

--- a/assets/styles/foundation/_variable.scss
+++ b/assets/styles/foundation/_variable.scss
@@ -13,6 +13,7 @@ $color-dark-blue: #1757c4;
 $color-white: #fff;
 $color-border-black: rgba(0, 0, 0, 0.5);
 $color-border-gray: #f1f1f1;
+$color-disabled: #12121236;
 
 // fonts
 
