style: style fixes

--- a/assets/styles/foundation/_base.scss
+++ b/assets/styles/foundation/_base.scss
@@ -2,8 +2,8 @@
 
 body {
   font-family: 'Noto Sans JP', sans-serif;
-  background: #fff;
-  color: #121212;
+  background: $color-white;
+  color: $color-default-black;
 }
 
 p {
