feat: implement ps-career-ca

--- a/assets/styles/foundation/_base.scss
+++ b/assets/styles/foundation/_base.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 body {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: $jp-font;
   background: $color-white;
   color: $color-default-black;
 }
